add truth-tracking section

--- a/references.bib
+++ b/references.bib
@@ -490,14 +490,6 @@
   year={2010}
 }
 
-@article{hartmann_judgment_2012,
-	title = {Judgment aggregation and the problem of tracking the truth},
-	journal = {Synthese},
-	author = {Hartmann, Stephan and Sprenger, Jan},
-	year = {2012},
-	pages = {209--221},
-}
-
 @article{meir_proxy_2019,
   author    = {Reshef Meir and
                Ofra Amir and
@@ -1507,5 +1499,156 @@ abstract = "This survey covers recent contributions from the artificial intellig
       author = {Singleton, Joseph and Booth, Richard},
       year={2022},
       note = {https://arxiv.org/abs/2205.00077},
+}
+
+@article{baltag_tt_2019,
+	title = {Truth-{Tracking} by {Belief} {Revision}},
+	volume = {107},
+	issn = {1572-8730},
+	url = {https://doi.org/10.1007/s11225-018-9812-x},
+	doi = {10.1007/s11225-018-9812-x},
+	number = {5},
+	journal = {Studia Logica},
+	author = {Baltag, Alexandru and Gierasimczuk, Nina and Smets, Sonja},
+	month = oct,
+	year = {2019},
+	keywords = {belief revision, logic, toread},
+	pages = {917--947},
+}
+
+@article{Baltag_2016,
+   title={On the Solvability of Inductive Problems: A Study in Epistemic Topology},
+   volume={215},
+   ISSN={2075-2180},
+   url={http://dx.doi.org/10.4204/EPTCS.215.7},
+   DOI={10.4204/eptcs.215.7},
+   journal={Electronic Proceedings in Theoretical Computer Science},
+   publisher={Open Publishing Association},
+   author={Baltag, Alexandru and Gierasimczuk, Nina and Smets, Sonja},
+   year={2016},
+   month={Jun},
+   pages={81–98}
+}
+
+@article{Gold_1967,
+	doi = {10.1016/s0019-9958(67)91165-5},
+	year = 1967,
+	month = {may},
+	publisher = {Elsevier {BV}},
+	volume = {10},
+	number = {5},
+	pages = {447--474},
+	author = {E Mark Gold},
+	title = {Language identification in the limit},
+	journal = {Information and Control}
+}
+
+@incollection{spohn1988ordinal,
+  title={Ordinal conditional functions: A dynamic theory of epistemic states},
+  author={Spohn, Wolfgang},
+  booktitle={Causation in decision, belief change, and statistics},
+  pages={105--134},
+  year={1988},
+  publisher={Springer}
+}
+
+@book{condorcet,
+  title={Essai sur l'application de l'analyse {\`a} la probabilit{\'e} des d{\'e}cisions rendues {\`a} la pluralit{\'e} des voix},
+  author={Condorcet, Nicolas de},
+  year={1785},
+
+}
+
+@article{grofman1983thirteen,
+  title={Thirteen theorems in search of the truth},
+  author={Grofman, Bernard and Owen, Guillermo and Feld, Scott L},
+  journal={Theory and decision},
+  volume={15},
+  number={3},
+  pages={261--278},
+  year={1983},
+  publisher={Springer}
+}
+
+@article{list2001epistemic,
+  title={Epistemic democracy: Generalizing the Condorcet jury theorem},
+  author={List, Christian and Goodin, Robert E},
+  journal={Journal of political philosophy},
+  volume={9},
+  number={3},
+  pages={277--306},
+  year={2001},
+  publisher={Wiley-Blackwell Publishing}
+}
+
+@article{hartmann_judgment_2012,
+	title = {Judgment aggregation and the problem of tracking the truth},
+	volume = {187},
+	issn = {1573-0964},
+	url = {https://doi.org/10.1007/s11229-011-0031-5},
+	doi = {10.1007/s11229-011-0031-5},
+	number = {1},
+	journal = {Synthese},
+	author = {Hartmann, Stephan and Sprenger, Jan},
+	month = jul,
+	year = {2012},
+	keywords = {toread, ja},
+	pages = {209--221},
+}
+
+@article{bozbay_judgment_2014,
+	title = {Judgment aggregation in search for the truth},
+	volume = {87},
+	issn = {0899-8256},
+	url = {http://www.sciencedirect.com/science/article/pii/S0899825614000384},
+	doi = {https://doi.org/10.1016/j.geb.2014.02.007},
+	journal = {Games and Economic Behavior},
+	author = {Bozbay, {\.I}rem and Dietrich, Franz and Peters, Hans},
+	year = {2014},
+	keywords = {toread, ja},
+	pages = {571 -- 590},
+}
+
+@inproceedings{TerzopoulouEndrissSAGT2019,
+  author =        {Zoi Terzopoulou and Ulle Endriss},
+  title =         {Optimal Truth-Tracking Rules for the Aggregation of Incomplete Judgments},
+  booktitle =     {Proceedings of the 12th International Symposium on Algorithmic Game Theory (SAGT-2019)},
+  month =         {September/October},
+  year =          {2019}
+}
+
+
+@inproceedings{rekatsinas2017slimfast,
+  title={SLiMFast: Guaranteed results for data fusion and source reliability},
+  author={Rekatsinas, Theodoros and Joglekar, Manas and Garcia-Molina, Hector and Parameswaran, Aditya and R{\'e}, Christopher},
+  booktitle={Proceedings of the 2017 ACM International Conference on Management of Data},
+  pages={1399--1414},
+  year={2017}
+}
+
+@book{jain1999systems,
+  title={Systems that learn: an introduction to learning theory},
+  author={Jain, Sanjay and Osherson, Daniel and Royer, James S and Sharma, Arun and others},
+  year={1999},
+  publisher={MIT}
+}
+
+@article{baltag2019dynamic,
+  title={A dynamic logic for learning theory},
+  author={Baltag, Alexandru and Gierasimczuk, Nina and {\"O}zg{\"u}n, Ayb{\"u}ke and Sandoval, Ana Lucia Vargas and Smets, Sonja},
+  journal={Journal of Logical and Algebraic Methods in Programming},
+  volume={109},
+  pages={100485},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@incollection{kelly1997reliable,
+  title={Reliable belief revision},
+  author={Kelly, Kevin and Schulte, Oliver and Hendricks, Vincent},
+  booktitle={Logic and Scientific Methods},
+  pages={383--398},
+  year={1997},
+  publisher={Springer}
 }
 
