start standardising presentation of axioms across chapters

--- a/macros.tex
+++ b/macros.tex
@@ -11,10 +11,17 @@
 \theoremstyle{plain}\newtheorem{proposition}{Proposition}[section]
 \theoremstyle{plain}\newtheorem{lemma}{Lemma}[section]
 \theoremstyle{plain}\newtheorem{definition}{Definition}[section]
-\theoremstyle{plain}\newtheorem*{notation}{Notation}
 \theoremstyle{plain}\newtheorem{claim}{Claim}[section]
 \theoremstyle{plain}\newtheorem{corollary}{Corollary}[section]
-\theoremstyle{plain}\newtheorem{axiom}{Axiom}[section]
+% \theoremstyle{plain}\newtheorem{axiom}{Axiom}[section]
+
+% Environment for axiom definition
+% See https://tex.stackexchange.com/a/417959 or `texdoc amsthm` for arguments
+\newtheoremstyle{axiomstyle}{}{}{\slshape}{}{\bfseries}{}{ }{$\diamond$ \thmnote{ #3 }}
+\theoremstyle{axiomstyle} \newtheorem*{axiom}{}
+
+% style for referencing axioms in the text
+\newcommand{\axiomref}[1]{\textbf{#1}}
 
 % cleveref cannot deduce the plural form for the "claim" environment, so give
 % it explicity
