standardise chapter outline markup

--- a/macros.tex
+++ b/macros.tex
@@ -39,3 +39,8 @@
 % it explicity
 \crefname{claim}{Claim}{Claims}
 \Crefname{claim}{Claim}{Claims}
+
+% chapter outline environment
+\newenvironment{chapteroutline}
+    {\paragraph{Chapter outline.}}
+    {}
