--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 \usepackage{booktabs}
 
 % line spacing
-\OnehalfSpacing
+% \OnehalfSpacing
 
 \setlrmarginsandblock{3.5cm}{*}{1}
 \setulmarginsandblock{3.5cm}{*}{1}
@@ -73,8 +73,8 @@
         {\HUGE\bfseries \thetitle}
         \par
         \vspace{2cm}
-        {\Large A thesis submitted in partial fulfilment of the requirement for the
-        degree of Doctor of Philosophy}
+        {\Large A thesis submitted in partial fulfilment of the requirement for
+        the degree of Doctor of Philosophy}
         \par
         \vspace{2cm}
         {\LARGE Joseph Singleton}
@@ -97,8 +97,8 @@
 
 \clearpage
 
-\chapter*{Ackowledgements}
-\addcontentsline{toc}{chapter}{Ackowledgements}
+\chapter*{Acknowledgements}
+\addcontentsline{toc}{chapter}{Acknowledgements}
 \input{acknowledgements.tex}
 
 \chapter*{List of Publications}
