add new TD chapter

--- a/body.tex
+++ b/body.tex
@@ -6,6 +6,11 @@
 }
 
 {
+    \input{chapters/td/macros.tex}
+    \input{chapters/td/content.tex}
+}
+
+{
     \input{chapters/tournaments/macros.tex}
     \input{chapters/tournaments/content.tex}
 }
