--- a/references.bib
+++ b/references.bib
@@ -1652,3 +1652,12 @@ abstract = "This survey covers recent contributions from the artificial intellig
   publisher={Springer}
 }
 
+@ARTICLE{xiao_22,
+  author={Xiao, Houping and Wang, Shiyu},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  title={A Joint Maximum Likelihood Estimation Framework for Truth Discovery: A Unified Perspective},
+  year={2015},
+  volume={},
+  number={},
+  pages={1-1},
+  doi={10.1109/TKDE.2022.3173911}}
