write about coherence in new TD

--- a/macros.tex
+++ b/macros.tex
@@ -52,3 +52,9 @@
 \newenvironment{chapteroutline}
     {\paragraph{Chapter outline.}}
     {}
+
+% greek letters
+\renewcommand{\phi}{\varphi}
+\renewcommand{\epsilon}{\varepsilon}
+
+\let\sectionsymbol\S
