--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,7 @@
 }
 
 % graphics path
-\graphicspath{ {./chapters/truthdiscovery/images/} }
+\graphicspath{ {./chapters/truthdiscovery/images/}{./chapters/td/images/}}
 
 % bibliography
 \addbibresource{references.bib}
