td: classical independence voting result

--- a/references.bib
+++ b/references.bib
@@ -1661,3 +1661,13 @@ abstract = "This survey covers recent contributions from the artificial intellig
   number={},
   pages={1-1},
   doi={10.1109/TKDE.2022.3173911}}
+
+@article{may1952set,
+  title={A set of independent necessary and sufficient conditions for simple majority decision},
+  author={May, Kenneth O},
+  journal={Econometrica: Journal of the Econometric Society},
+  pages={680--684},
+  year={1952},
+  publisher={JSTOR}
+}
+
