change all double quotese to two single quotes

--- a/macros.tex
+++ b/macros.tex
@@ -43,7 +43,7 @@
 \crefformat{inlinelisti}{#2#1#3}
 \Crefformat{inlinelisti}{#2#1#3}
 
-% cleveref cannot deduce the plural form for the "claim" environment, so give
+% cleveref cannot deduce the plural form for the `claim` environment, so give
 % it explicity
 \crefname{claim}{Claim}{Claims}
 \Crefname{claim}{Claim}{Claims}
