td: define object-irrelevance

--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@
 \graphicspath{ {./chapters/truthdiscovery/images/} }
 
 % tikz setup
+\usetikzlibrary{calc}
 \usetikzlibrary{decorations.pathreplacing}
 
 % bibliography
