td: proof of voting characterisation

--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{bm}
 \usepackage[inline]{enumitem}
 \usepackage{subcaption}
+\usepackage[font={small,it}]{caption}
 \usepackage{booktabs}
 \usepackage{listofitems}
 
