td: finish crh example

--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \usepackage[font={small,it}]{caption}
 \usepackage{booktabs}
 \usepackage{listofitems}
+\usepackage{dsfont}
 
 % line spacing
 % \OnehalfSpacing
