finish wighted op axiom examples

--- a/body.tex
+++ b/body.tex
@@ -1,9 +1,9 @@
 \input{chapters/introduction/content.tex}
 
-{
-    \input{chapters/truthdiscovery/macros.tex}
-    \input{chapters/truthdiscovery/content.tex}
-}
+% {
+%     \input{chapters/truthdiscovery/macros.tex}
+%     \input{chapters/truthdiscovery/content.tex}
+% }
 
 {
     \input{chapters/td/macros.tex}
