--- a/main.tex
+++ b/main.tex
@@ -115,7 +115,7 @@
 \mainmatter
 \input{body.tex}
 \printbibliography
-\appendix
-\input{appendix.tex}
+% \appendix
+% \input{appendix.tex}
 
 \end{document}
