propograte modal logic paper changes from synthese revisions

--- a/body.tex
+++ b/body.tex
@@ -15,10 +15,10 @@
 %     \input{chapters/tournaments/content.tex}
 % }
 
-% {
-%     \input{chapters/expertise/macros.tex}
-%     \input{chapters/expertise/content.tex}
-% }
+{
+    \input{chapters/expertise/macros.tex}
+    \input{chapters/expertise/content.tex}
+}
 
 % {
 %     \input{chapters/belief-change/macros.tex}
