--- a/references.bib
+++ b/references.bib
@@ -1374,14 +1374,6 @@ isbn="978-3-030-75775-5"
 	pages = {1--16},
 }
 
-@article{singleton2021logic,
-      title={A Logic of Expertise},
-      author={Joseph Singleton},
-      year={2021},
-      note={https://arxiv.org/abs/2107.10832},
-      journal={ESSLLI 2021 Student Session},
-}
-
 @book{blackburn2002modal,
     place={Cambridge},
     title={Modal Logic},
@@ -1669,5 +1661,79 @@ abstract = "This survey covers recent contributions from the artificial intellig
   pages={680--684},
   year={1952},
   publisher={JSTOR}
+}
+
+@inbook{Scott1970,
+    author="Scott, Dana",
+    editor="Lambert, Karel",
+    title="Advice on Modal Logic",
+    booktitle="Philosophical Problems in Logic: Some Recent Developments",
+    year="1970",
+    publisher="Springer Netherlands",
+    address="Dordrecht",
+    pages="143--173",
+    isbn="978-94-010-3272-8",
+    doi="10.1007/978-94-010-3272-8_7",
+}
+
+@article{montague1970universal,
+  title={Universal grammar},
+  author={{Montague}, Richard},
+  journal={Theoria},
+  volume={36},
+  number={3},
+  pages={373--398},
+  year={1970},
+  publisher={Wiley Online Library}
+}
+
+@article{steiner1966lattice,
+  title={The lattice of topologies: structure and complementation},
+  author={Steiner, Anne K},
+  journal={Transactions of the American Mathematical Society},
+  volume={122},
+  number={2},
+  pages={379--398},
+  year={1966},
+  publisher={JSTOR}
+}
+
+@article{blum2016liquid,
+  title={Liquid democracy: Potentials, problems, and perspectives},
+  author={Blum, Christian and Zuber, Christina Isabel},
+  journal={Journal of Political Philosophy},
+  volume={24},
+  number={2},
+  pages={162--182},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article {Llewellynm1160,
+	author = {Llewellyn, Sue},
+	title = {Covid-19: how to be careful with trust and expertise on social media},
+	volume = {368},
+	year = {2020},
+	publisher = {BMJ Publishing Group Ltd},
+	journal = {BMJ}
+}
+
+@article{dijck2020,
+author = {van Dijck, José and Alinejad, Donya},
+title ={Social Media and Trust in Scientific Expertise: Debating the Covid-19 Pandemic in The Netherlands},
+journal = {Social Media + Society},
+volume = {6},
+number = {4},
+year = {2020},
+}
+
+@article{xaudiera2020ibuprofen,
+  title={Ibuprofen narratives in five European countries during the COVID-19 pandemic},
+  author={Xaudiera, Sergi and Cardenal, Ana S},
+  journal={Harvard Kennedy School Misinformation Review},
+  volume={1},
+  number={3},
+  year={2020},
+  url={https://misinforeview.hks.harvard.edu/article/ibuprofen-narratives-in-five-european-countries-during-the-covid-19-pandemic/},
 }
 
