update self citations

--- a/body.tex
+++ b/body.tex
@@ -10,24 +10,24 @@
     \input{chapters/td/content.tex}
 }
 
-% {
-%     \input{chapters/tournaments/macros.tex}
-%     \input{chapters/tournaments/content.tex}
-% }
+{
+    \input{chapters/tournaments/macros.tex}
+    \input{chapters/tournaments/content.tex}
+}
 
 {
     \input{chapters/expertise/macros.tex}
     \input{chapters/expertise/content.tex}
 }
 
-% {
-%     \input{chapters/belief-change/macros.tex}
-%     \input{chapters/belief-change/content.tex}
-% }
+{
+    \input{chapters/belief-change/macros.tex}
+    \input{chapters/belief-change/content.tex}
+}
 
-% {
-%     \input{chapters/truth-tracking/macros.tex}
-%     \input{chapters/truth-tracking/content.tex}
-% }
+{
+    \input{chapters/truth-tracking/macros.tex}
+    \input{chapters/truth-tracking/content.tex}
+}
 
-% \input{chapters/conclusion/content.tex}
+\input{chapters/conclusion/content.tex}
