--- a/publications.tex
+++ b/publications.tex
@@ -1,9 +1,10 @@
 The content of this thesis is derived from the following publications.
-\todo{Add descriptions and chapter referencesbeneath each citation?}
+\todo{Add descriptions and chapter references beneath each citation?}
 
 \begin{itemize}
-    \item \fullcite{singleton_booth_2020}
+    \item \fullcite{singleton2022towards}
     \item \fullcite{singleton_booth_bipartite}
-    \item \fullcite{singleton2021logic}
+    \item \fullcite{singleton2021logic} \todo{replace with synthese}
     \item \fullcite{singleton_booth_22}
+    \item \todo{NMR}
 \end{itemize}
