--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,12 @@
-@misc{singleton_booth_22,
-  doi = {10.48550/ARXIV.2205.00077},
-  url = {https://arxiv.org/abs/2205.00077},
-  author = {Singleton, Joseph and Booth, Richard},
-  keywords = {Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
-  title = {Who's the Expert? On Multi-source Belief Change},
-  publisher = {arXiv},
-  year = {2022},
-  copyright = {Creative Commons Attribution 4.0 International}
+@inproceedings{singleton_booth_22,
+    title     = {{Who’s the Expert? On Multi-source Belief Change}},
+    author    = {Singleton, Joseph and Booth, Richard},
+    booktitle = {{Proceedings of the 19th International Conference on Principles of Knowledge Representation and Reasoning}},
+    pages     = {331--340},
+    year      = {2022},
+    month     = {8},
+    doi       = {10.24963/kr.2022/33},
+    url       = {https://doi.org/10.24963/kr.2022/33},
 }
 
 @conference{christoffbinary,
@@ -1737,3 +1737,13 @@ year = {2020},
   url={https://misinforeview.hks.harvard.edu/article/ibuprofen-narratives-in-five-european-countries-during-the-covid-19-pandemic/},
 }
 
+@article{singleton2022towards,
+  title={Towards an axiomatic approach to truth discovery},
+  author={Singleton, Joseph and Booth, Richard},
+  journal={Autonomous Agents and Multi-Agent Systems},
+  volume={36},
+  number={2},
+  pages={1--49},
+  year={2022},
+  publisher={Springer}
+}
