Add interlude between SC and logic parts

--- a/body.tex
+++ b/body.tex
@@ -16,6 +16,10 @@
 }
 
 {
+    \input{chapters/interlude/content.tex}
+}
+
+{
     \input{chapters/expertise/macros.tex}
     \input{chapters/expertise/content.tex}
 }
