--- a/macros.tex
+++ b/macros.tex
@@ -57,4 +57,7 @@
 \renewcommand{\phi}{\varphi}
 \renewcommand{\epsilon}{\varepsilon}
 
+% misc operators
+\newcommand{\trcls}{+}  % transitive closure
+
 \let\sectionsymbol\S
