--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,11pt,oneside]{memoir}
 
 % packages
-\usepackage{newpxtext} % palatino font
+% \usepackage{newpxtext} % palatino font
 % \usepackage[T1]{fontenc}
 \usepackage{xcolor}
 \usepackage[backend=biber,backref=true]{biblatex}
