add nmr reference

--- a/publications.tex
+++ b/publications.tex
@@ -6,5 +6,5 @@ The content of this thesis is derived from the following publications.
     \item \fullcite{singleton_booth_bipartite}
     \item \fullcite{singleton2021logic} \todo{replace with synthese}
     \item \fullcite{singleton_booth_22}
-    \item \todo{NMR}
+    \item \fullcite{singleton_booth_tt_2022}
 \end{itemize}
