--- a/references.bib
+++ b/references.bib
@@ -1747,3 +1747,15 @@ year = {2020},
   year={2022},
   publisher={Springer}
 }
+
+@inproceedings{singleton_booth_tt_2022,
+	series = {{NMR} '22},
+	title = {Truth-Tracking with Non-Expert Information Sources},
+	url = {http://ceur-ws.org/Vol-3197/paper8.pdf},
+    booktitle = {Proceedings of the 20th {International} {Workshop} on {Non}-Monotonic {Reasoning}},
+	publisher = {CEUR Workshop Proceedings},
+	author = {Singleton, Joseph and Booth, Richard},
+	year = {2022},
+	pages = {80--91},
+}
+
