merging: (start to) show that our operators are model-based merging operators

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,4 +1,9 @@
+% {
+%     \input{chapters/truthdiscovery/macros.tex}
+%     \input{chapters/truthdiscovery/appendix.tex}
+% }
+
 {
-    \input{chapters/truthdiscovery/macros.tex}
-    \input{chapters/truthdiscovery/appendix.tex}
+    \input{chapters/belief-change/macros.tex}
+    \input{chapters/belief-change/appendix.tex}
 }
