--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{amssymb}
+\usepackage{thm-restate}
 \usepackage[capitalise]{cleveref}
 \usepackage{graphicx}
 \usepackage{tikz}
@@ -115,7 +116,7 @@
 \mainmatter
 \input{body.tex}
 \printbibliography
-% \appendix
-% \input{appendix.tex}
+\appendix
+\input{appendix.tex}
 
 \end{document}
