--- a/references.bib
+++ b/references.bib
@@ -1343,22 +1343,6 @@ series = {AAMAS '21}
   year={2006}
 }
 
-@InProceedings{yasser_21,
-author="Yasser, Ammar
-and Ismail, Haythem O.",
-editor="Faber, Wolfgang
-and Friedrich, Gerhard
-and Gebser, Martin
-and Morak, Michael",
-title="Trust Is All You Need: From Belief Revision to Information Revision",
-booktitle="Logics in Artificial Intelligence",
-year="2021",
-publisher="Springer International Publishing",
-address="Cham",
-pages="50--65",
-isbn="978-3-030-75775-5"
-}
-
 @article{li_survey_2016,
 	title = {A {Survey} on {Truth} {Discovery}},
 	volume = {17},
@@ -1757,5 +1741,12 @@ year = {2020},
 	author = {Singleton, Joseph and Booth, Richard},
 	year = {2022},
 	pages = {80--91},
+}
+
+@article{yasser_21,
+  title={Information Revision: The Joint Revision of Belief and Trust},
+  author={Yasser, Ammar and Ismail, Haythem O.},
+  year={2020},
+  journal={NMR}
 }
 
