fix bibtex warnings

--- a/references.bib
+++ b/references.bib
@@ -87,7 +87,7 @@
 	Issn = {1076-9757},
 	Issue_Date = {January 2008},
 	Journal = {J. Artif. Int. Res.},
-	Month = mar,
+	Month = 3,
 	Number = {1},
 	Numpages = {23},
 	Pages = {473--495},
@@ -176,7 +176,7 @@
 	Issn = {1041-4347},
 	Journal = {IEEE Transactions on Knowledge and Data Engineering},
 	Keywords = {search engines;Web sites;truth discovery;multiple conflicting information providers;World Wide Web;information source;Veracity;TRUTHFINDER;Websites;search engines;Books;Web sites;Internet;Web page design;Algorithm design and analysis;Iterative algorithms;Iterative methods;Search engines;Web mining;Data mining;Web mining;Data mining;Web mining},
-	Month = {June},
+	Month = {6},
 	Number = {6},
 	Pages = {796-808},
 	Title = {Truth Discovery with Multiple Conflicting Information Providers on the Web},
@@ -219,13 +219,12 @@
 	Doi = {10.1109/TKDE.2016.2559481},
 	Issn = {1041-4347},
 	Journal = {IEEE Transactions on Knowledge and Data Engineering},
-	Month = {Aug},
+	Month = {8},
 	Number = {8},
 	Pages = {1986-1999},
 	Title = {Conflicts to Harmony: A Framework for Resolving Conflicts in Heterogeneous Data by Truth Discovery},
 	Volume = {28},
-	Year = {2016},
-	Bdsk-Url-1 = {https://doi.org/10.1109/TKDE.2016.2559481}}
+	Year = {2016}}
 
 @article{gupta2011survey,
 	Acmid = {2031341},
@@ -352,20 +351,6 @@
 	keywords = {toread, probability},
 }
 
-@article{li_survey_2016,
-	title = {A Survey on Truth Discovery},
-	volume = {17},
-	issn = {1931-0145},
-	url = {http://doi.acm.org/10.1145/2897350.2897352},
-	doi = {10.1145/2897350.2897352},
-	pages = {1--16},
-	number = {2},
-	Journal = {{SIGKDD} Explor. Newsl.},
-	author = {Li, Yaliang and Gao, Jing and Meng, Chuishi and Li, Qi and Su, Lu and Zhao, Bo and Fan, Wei and Han, Jiawei},
-	year = {2016},
-	keywords = {td, survey},
-}
-
 @inproceedings{yin_supervised_2011,
 	location = {New York, {NY}, {USA}},
 	title = {Semi-supervised Truth Discovery},
@@ -415,7 +400,7 @@
 	pages = {1076--1081},
 	booktitle = {2016 {IEEE} International Conference on Big Data (Big Data)},
 	author = {Zhang, Daniel Yue and Han, Rungang and Wang, Dong and Huang, Chao},
-	year = {2016-12},
+	year = {2016},
 	keywords = {td},
 }
 
@@ -508,21 +493,6 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{singleton_booth_2020,
-author = {Singleton, Joseph and Booth, Richard},
-title = {An Axiomatic Approach to Truth Discovery},
-year = {2020},
-isbn = {9781450375184},
-publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
-address = {Richland, SC},
-booktitle = {Proceedings of the 19th International Conference on Autonomous Agents and MultiAgent Systems},
-pages = {2011–2013},
-numpages = {3},
-keywords = {social choice theory, trust and reputation, axioms, truth discovery},
-location = {Auckland, New Zealand},
-series = {AAMAS ’20}
-}
-
 @inproceedings{ghosh_2011,
 	doi = {10.1145/1993574.1993599},
 	url = {https://doi.org/10.1145%2F1993574.1993599},
@@ -552,7 +522,7 @@ series = {AAMAS ’20}
 	number = {1},
 	journal = {Proc. VLDB Endow.},
 	author = {Dong, Xin Luna and Berti-Equille, Laure and Srivastava, Divesh},
-	month = aug,
+	month = 8,
 	year = {2009},
 	keywords = {td},
 	pages = {562--573},
@@ -642,17 +612,6 @@ series = {AAMAS ’20}
   publisher = {{AAAI} Press},
   year      = {2008},
   url       = {http://www.aaai.org/Library/KR/2008/kr08-018.php},
-}
-
-@article{konieczny2002merging,
-  title={Merging information under constraints: a logical framework},
-  author={Konieczny, S{\'e}bastien and P{\'e}rez, Ram{\'o}n Pino},
-  journal={Journal of Logic and computation},
-  volume={12},
-  number={5},
-  pages={773--808},
-  year={2002},
-  publisher={Oxford University Press}
 }
 
 @book{laslier2010handbook,
@@ -829,20 +788,6 @@ series = {AAMAS ’20}
   publisher={Springer}
 }
 
-@article{li_survey_2016,
-	title = {A {Survey} on {Truth} {Discovery}},
-	volume = {17},
-	issn = {1931-0145},
-	number = {2},
-	journal = {SIGKDD Explor. Newsl.},
-	author = {Li, Yaliang and Gao, Jing and Meng, Chuishi and Li, Qi and Su, Lu and Zhao, Bo and Fan, Wei and Han, Jiawei},
-	month = feb,
-	year = {2016},
-	keywords = {td, survey},
-	pages = {1--16},
-	file = {Li et al. - 2016 - A Survey on Truth Discovery.pdf:/home/joe/Zotero/storage/DT3IWHVW/Li et al. - 2016 - A Survey on Truth Discovery.pdf:application/pdf}
-}
-
 @article{yannakakis1981computing,
   title={Computing the minimum fill-in is NP-complete},
   author={Yannakakis, Mihalis},
@@ -941,19 +886,6 @@ Carlos M. da Fonseca and Slobodan K. Simi{\'c} and Dejan V. To{\v s}i{\'c}",
   pages     = {1763--1769},
   year      = {2020},
   month     = {7},
-}
-
-@inproceedings{wang_truth_2012,
-	address = {New York},
-	series = {{IPSN} '12},
-	title = {On {Truth} {Discovery} in {Social} {Sensing}: {A} {Maximum} {Likelihood} {Estimation} {Approach}},
-	isbn = {978-1-4503-1227-1},
-	booktitle = {Proceedings of the 11th {International} {Conference} on {Information} {Processing} in {Sensor} {Networks}},
-	publisher = {ACM},
-	author = {Wang, Dong and Kaplan, Lance and Le, Hieu and Abdelzaher, Tarek},
-	year = {2012},
-	keywords = {td},
-	pages = {233--244},
 }
 
 @inproceedings{singleton_booth_2020,
@@ -1081,14 +1013,6 @@ series = {AAMAS ’20}
   publisher={Springer}
 }
 
-@book{blackburn2002modal,
-  title={Modal logic},
-  author={Blackburn, Patrick and De Rijke, Maarten and Venema, Yde},
-  volume={53},
-  year={2002},
-  publisher={Cambridge University Press}
-}
-
 @book{chi2014nature,
   title={The nature of expertise},
   author={Chi, Michelene TH and Glaser, Robert and Farr, Marshall J},
@@ -1158,18 +1082,9 @@ pages="543--555",
 isbn="978-3-030-89188-6"
 }
 
-@inproceedings{dastani2004inferring,
-  title={Inferring trust},
-  author={Dastani, Mehdi and Herzig, Andreas and Hulstijn, Joris and Van Der Torre, Leendert},
-  booktitle={CLIMA},
-  pages={144--160},
-  year={2004},
-  organization={Springer}
-}
-
 @article{van2011dynamic,
   title={Dynamic logics of evidence-based beliefs},
-  author={{van Benthem}, Johan and Pacuit, Eric},
+  author={van {Benthem}, Johan and Pacuit, Eric},
   journal={Studia Logica},
   volume={99},
   number={1},
@@ -1185,18 +1100,8 @@ volume = {165},
 number = {1},
 pages = {106-133},
 year = {2014},
-author = {Johan {van Benthem} and David Fern{\'{a}}ndez-Duque and Eric Pacuit},
+author = {Johan van {Benthem} and David Fern{\'{a}}ndez-Duque and Eric Pacuit},
 keywords = {Modal logic, Neighborhood semantics, Plausibility ordering, Evidence-based reasoning, Doxastic logic},
-}
-
-@article{booth_trust_2018,
-	title = {Trust as a {Precursor} to {Belief} {Revision}},
-	volume = {61},
-	journal = {JAIR},
-	author = {Booth, Richard and Hunter, Aaron},
-	year = {2018},
-	keywords = {belief revision, trust},
-	pages = {699--722},
 }
 
 @article{Liau_2003,
@@ -1327,7 +1232,7 @@ series = {AAMAS '21}
 @article{booth_trust_2018,
 	title = {Trust as a {Precursor} to {Belief} {Revision}},
 	volume = {61},
-	journal = {J. Artif. Intell. Res.},
+	journal = {Journal of Artificial Intelligence Research},
 	author = {Booth, Richard and Hunter, Aaron},
 	year = {2018},
 	keywords = {belief revision, trust},
@@ -1350,7 +1255,7 @@ series = {AAMAS '21}
 	url = {http://doi.acm.org/10.1145/2897350.2897352},
 	doi = {10.1145/2897350.2897352},
 	number = {2},
-	journal = {SIGKDD Explor. Newsl.},
+	journal = {SIGKDD Explorations Newsletter},
 	author = {Li, Yaliang and Gao, Jing and Meng, Chuishi and Li, Qi and Su, Lu and Zhao, Bo and Fan, Wei and Han, Jiawei},
 	month = {2},
 	year = {2016},
@@ -1370,7 +1275,7 @@ series = {AAMAS '21}
 @incollection{peppas_2008,
     title = {Belief Revision},
     chapter = {8},
-    editor = {Frank {van Harmelen} and Vladimir Lifschitz and Bruce Porter},
+    editor = {Frank van {Harmelen} and Vladimir Lifschitz and Bruce Porter},
     series = {Foundations of Artificial Intelligence},
     publisher = {Elsevier},
     volume = {3},
@@ -1435,7 +1340,7 @@ isbn="978-3-030-89188-6"
         doi = {10.1007/s10992-011-9175-5},
         url = {https://doi.org/10.1007%2Fs10992-011-9175-5},
         year = 2011,
-        month = {mar},
+        month = {3},
         publisher = {Springer Science and Business Media {LLC}},
         volume = {40},
         number = {2},
@@ -1443,15 +1348,6 @@ isbn="978-3-030-89188-6"
         author = {S{\'{e}}bastien Konieczny and Ram{\'{o}}n Pino P{\'{e}}rez},
         title = {Logic Based Merging},
         journal = {Journal of Philosophical Logic}
-}
-
-@book{handbook_epistemic,
-title = "Handbook of Epistemic Logic",
-editor = "{van Ditmarsch}, Hans and {van der Hoek}, Wiebe and Halpern, {Joseph Y.} and Barteld Kooi",
-year = "2015",
-language = "English",
-isbn = "978-1-84890-158-2",
-publisher = "College Publications",
 }
 
 @article{gregoire_fusion_2006,
@@ -1502,14 +1398,14 @@ abstract = "This survey covers recent contributions from the artificial intellig
    publisher={Open Publishing Association},
    author={Baltag, Alexandru and Gierasimczuk, Nina and Smets, Sonja},
    year={2016},
-   month={Jun},
+   month={6},
    pages={81–98}
 }
 
 @article{Gold_1967,
 	doi = {10.1016/s0019-9958(67)91165-5},
 	year = 1967,
-	month = {may},
+	month = {5},
 	publisher = {Elsevier {BV}},
 	volume = {10},
 	number = {5},
@@ -1589,7 +1485,7 @@ abstract = "This survey covers recent contributions from the artificial intellig
   author =        {Zoi Terzopoulou and Ulle Endriss},
   title =         {Optimal Truth-Tracking Rules for the Aggregation of Incomplete Judgments},
   booktitle =     {Proceedings of the 12th International Symposium on Algorithmic Game Theory (SAGT-2019)},
-  month =         {September/October},
+  month =         {9},
   year =          {2019}
 }
 
