changes to KR chapter based on richard's feedback

--- a/references.bib
+++ b/references.bib
@@ -599,21 +599,6 @@
   publisher={Morgan \& Claypool Publishers}
 }
 
-@inproceedings{koniecznyP08_improvement,
-  author    = {S{\'{e}}bastien Konieczny and
-               Ram{\'{o}}n Pino P{\'{e}}rez},
-  editor    = {Gerhard Brewka and
-               J{\'{e}}r{\^{o}}me Lang},
-  title     = {Improvement Operators},
-  booktitle = {Principles of Knowledge Representation and Reasoning: Proceedings
-               of the Eleventh International Conference, {KR} 2008, Sydney, Australia,
-               September 16-19, 2008},
-  pages     = {177--187},
-  publisher = {{AAAI} Press},
-  year      = {2008},
-  url       = {http://www.aaai.org/Library/KR/2008/kr08-018.php},
-}
-
 @book{laslier2010handbook,
   title={Handbook on approval voting},
   author={Laslier, Jean-Fran{\c{c}}ois and Sanver, M Remzi},
@@ -1345,7 +1330,7 @@ isbn="978-3-030-89188-6"
         volume = {40},
         number = {2},
         pages = {239--270},
-        author = {S{\'{e}}bastien Konieczny and Ram{\'{o}}n Pino P{\'{e}}rez},
+        author = {Konieczny, S{\'{e}}bastien and Pino P{\'{e}}rez, Ram{\'{o}}n},
         title = {Logic Based Merging},
         journal = {Journal of Philosophical Logic}
 }
@@ -1644,5 +1629,21 @@ year = {2020},
   author={Yasser, Ammar and Ismail, Haythem O.},
   year={2020},
   journal={NMR}
+}
+
+@InProceedings{yasser_journal_2021,
+author="Yasser, Ammar
+and Ismail, Haythem O.",
+editor="Faber, Wolfgang
+and Friedrich, Gerhard
+and Gebser, Martin
+and Morak, Michael",
+title="Trust Is All You Need: From Belief Revision to Information Revision",
+booktitle="Logics in Artificial Intelligence",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="50--65",
+isbn="978-3-030-75775-5"
 }
 
