More updates in light of Richard's feedback

--- a/references.bib
+++ b/references.bib
@@ -1647,3 +1647,11 @@ pages="50--65",
 isbn="978-3-030-75775-5"
 }
 
+@inproceedings{boutilier1998belief,
+  title={Belief revision with unreliable observations},
+  author={Boutilier, Craig and Friedman, Nir and Halpern, Joseph Y},
+  booktitle={AAAI/IAAI},
+  pages={127--134},
+  year={1998}
+}
+
