td: write about usums

--- a/appendix.tex
+++ b/appendix.tex
@@ -4,6 +4,11 @@
 % }
 
 {
+    \input{chapters/td/macros.tex}
+    \input{chapters/td/appendix.tex}
+}
+
+{
     \input{chapters/belief-change/macros.tex}
     \input{chapters/belief-change/appendix.tex}
 }
